Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5630

Windows C++ broker never finds modules in module directory

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.27
    • C++ Broker
    • None
    • Windows

    Description

      There is an error in the way that the --module-dir option works on windows which means that it doesn't try to load modules with the correct name and hence will never load any module automatically.

      [modules loaded with --load-module and an explicit path will work]

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: