QPID-5630: Windows C++ broker never loads modules using --module-dir - Need to use full path to load modules instead of just the filename.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1577742 13f79535-47bb-0310-9956-ffa450edef68